fix z-index sub-menu

--- a/css/sidebar-component.css
+++ b/css/sidebar-component.css
@@ -56,6 +56,7 @@
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-top: 0;
 	transition: opacity 0.3s, right 0.3s;
+	z-index: 1;
 }
 
 
